--- a/hms-frontend/src/components/Sidebar.css
+++ b/hms-frontend/src/components/Sidebar.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    font-family: Luxurious Rooman;
+    font-family: "Luxurious Rooman";
 }
 
 .sidebar-header {
