--- a/hms-frontend/src/css/Login.css
+++ b/hms-frontend/src/css/Login.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 450vh;
     font-family: "Luxurious Rooman";
+    background-color: #1a1d20;
 }
 
 .login-box {
@@ -61,6 +61,9 @@
 .login-message {
     margin-top: 10px;
     color: white;
+}
+.message{
+    color:white;
 }
 
 
