Added availability and its css

--- a/hms-frontend/src/css/AddRoomForm.css
+++ b/hms-frontend/src/css/AddRoomForm.css
@@ -23,7 +23,8 @@
 
 .add-room-form input[type="text"],
 .add-room-form input[type="type"],
-.add-room-form input[type="price"] {
+.add-room-form input[type="price"],
+.add-room-form input[type="availability"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
