Added section and shift and the css

--- a/hms-frontend/src/css/AddUserForm.css
+++ b/hms-frontend/src/css/AddUserForm.css
@@ -23,7 +23,10 @@
 
 .add-user-form input[type="text"],
 .add-user-form input[type="email"],
-.add-user-form input[type="password"] {
+.add-user-form input[type="password"],
+.add-user-form input[type="role"],
+.add-user-form input[type="section"],
+.add-user-form input[type="shift"]{
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
